@@ -1,3 +1,10 @@
+2007-03-14  Alan Modra  <amodra@bigpond.net.au>
+
+	PR 4029
+	* write.c (relax_segment): Insert extra alignment padding
+	to break infinite relax loop when given impossible
+	gcc_except_table assembly.
+
 2007-03-12  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* config/tc-i386.c (md_assemble): Use Opcode_XXX instead of XXX
